[gd_scene load_steps=3 format=3 uid="uid://cknf4w7iliyxh"]

[ext_resource type="Script" uid="uid://baqe6jfawp2mv" path="res://Script/UI/pause_menu.gd" id="1_i17my"]
[ext_resource type="AudioStream" uid="uid://2tnto0kwqih6" path="res://Assets/Audio/heartbeat.mp3" id="2_s8k43"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i17my")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -74.0
offset_right = 167.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="settingButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="HeartbeatPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_s8k43")

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/settingButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
